add more structure in html and styles in css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=   , initial-scale=1.0">
+    <title>BitCook</title>
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
+    <div id="grid-container">
+        <header>
 
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+    </div>
 </body>
 
 </html>
