create areas and header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 <body>
     <div id="grid-container">
         <header>
-
+            <nav>
+                <ul>
+                    <li><a href="">BitCook</a></li>
+                    <li><a href="">Send your recipe</a></li>
+                    <li><img src="" alt=""></li>
+                </ul>
+            </nav>
         </header>
         <main>
 
