add menu with hmlt and styles with css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=   , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BitCook</title>
     <link rel="stylesheet" href="./css/style.css">
 
@@ -12,11 +12,13 @@
 <body>
     <div id="grid-container">
         <header>
+            <div id="logo">
+                <a href="#">BitCook</a>
+            </div>
             <nav>
                 <ul>
-                    <li><a href="">BitCook</a></li>
-                    <li><a href="">Send your recipe</a></li>
-                    <li><img src="" alt=""></li>
+                    <li><a href="#">Send your recipe</a></li>
+                    <li></li>
                 </ul>
             </nav>
         </header>
