add structure and styles of banner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </nav>
         </header>
         <main>
-
+            <div id="banner">
+                <p class="phara">Ad lorem ipsum dolor sit amet</p>
+            </div>
         </main>
         <footer>
 
