--- a/index.html
+++ b/index.html
@@ -26,6 +26,63 @@
             <div id="banner">
                 <p class="phara">Ad lorem ipsum dolor sit amet</p>
             </div>
+            <h1>Our best recipes</h1>
+            <div>
+                <div class="recipe1">
+                    <img src="./img/sushi.jpg" alt="">
+                    <h2>Sushi</h2>
+                    <ul>
+                        <li>Total: Aproximately 40 minutes.</li>
+                        <li>Preparation: 10minutes</li>
+                        <li>Cooking: 30 minutes</li>
+                    </ul>
+                </div>
+                <div class="recipe2">
+                    <img src="" alt="">
+                    <h2>Gyozas</h2>
+                    <ul>
+                        <li>Total: Aproximately 40 minutes</li>
+                        <li>Preparation: 30 minutes</li>
+                        <li>Cooking: 10 minutes</li>
+                    </ul>
+                </div>
+                <div class="recipe3">
+                    <img src="" alt="">
+                    <h2>Katsudon</h2>
+                    <ul>
+                        <li>Total: Aproximately 1 hour</li>
+                        <li>Preparation: 10 minutes</li>
+                        <li>Cooking: 50 minutes</li>
+                    </ul>
+                </div>
+                <div class="recipe4">
+                    <img src="" alt="">
+                    <h2>Mochis</h2>
+                    <ul>
+                        <li>Total: Aproximately 30 minutes</li>
+                        <li>Preparation: 30 minutes</li>
+                        <li>Repose: 2 hours</li>
+                    </ul>
+                </div>
+                <div class="recipe5">
+                    <img src="" alt="">
+                    <h2>Onigiri</h2>
+                    <ul>
+                        <li>Total: Aproximately 1 hour</li>
+                        <li>Preparation: 40 minutes</li>
+                        <li>Cooking: 20 minutes</li>
+                    </ul>
+                </div>
+                <div class="recipe6">
+                    <img src="" alt="">
+                    <h2>Ramen</h2>
+                    <ul>
+                        <li>Total: Aproximately 1 hour</li>
+                        <li>Preparation: 30 minutes</li>
+                        <li>Cooking: 30 minutes</li>
+                    </ul>
+                </div>
+            </div>
         </main>
         <footer>
 
