finish structure in html and more styles in css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 id="titulo">Our best recipes</h1>
             <div id="Recipes">
                 <div class="recipes1">
-                    <a href="">
+                    <a href="./Recipes/recipe1.html">
                         <div class="recipe">
                             <img src="./img/sushi.jpg" alt="">
                             <h2>Sushi</h2>
