add new html for the recipes folder, also add new styles, and corrections to the css and html

--- a/Recipes/sushi.html
+++ b/Recipes/sushi.html
@@ -30,7 +30,7 @@
                     duda esta elaboración es una de las que más gustan a todos. Como es un plato que resulta caro si lo
                     pedimos fuera de casa y es muy importante consumirlo bien fresco, hoy os queremos enseñar esta
                     receta fácil de sushi, para que podáis hacerlo cuando queráis.</p>
-                <div class="preparation">
+                <div id="preparation">
                     <h2>Preparatin Time</h2>
                     <ul>
                         <li>Total: Approximately 35 minutes.</li>
@@ -38,41 +38,49 @@
                         <li>Cooking: 20 minutes.</li>
                     </ul>
                 </div>
-                <h2>Instruccions</h2>
-                <p>Comenzamos preparando el arroz. Como ya os explicamos aquí, hacer arroz para sushi es un proceso
-                    sencillo. Basta con cocer el arroz (tipo glutinoso o especial para sushi) y después enfriarlo con un
-                    abanico tras aliñarlo con vinagre, azúcar y sal.
-                    <br>
-                    <br>
-                    Es conveniente tener todos los ingredientes listos a la hora de preparar el sushi, ya que deben ser
-                    productos muy frescos y no conviene perder tiempo en su manipulación. Por eso, prepararemos una
-                    juliana de aguacate y haremos lo mismo con el pepino para tenerlo listo cuando vayamos a formar los
-                    makis.
-                    <br>
-                    <br>
-                    En cuanto al pescado a utilizar, en este caso cortamos el salmón eligiendo la zona de la ventresca
-                    para darle unos cortes en tiras. Aquí podéis ver perfectamente cómo hacerlo. Con todo listo,
-                    cortamos la hoja de alga nori en dos, la ponemos sobre una esterilla o makisu forrada de film
-                    transparente de cocina dejando el lado rugoso arriba, y sobre ella extendemos el arroz presionando
-                    un poco para que se adhiera.
-                    <br>
-                    <br>
-                    En el centro del arroz, colocamos las tiras de pescado, el pepino y el aguacate y opcionalmente, un
-                    poco de wasabi, si nos gusta el toque picante de este condimento. Ya solo falta enrollar el alga
-                    ayudados con la esterilla y formar un cilindro. A la hora de servirlo hay que cortarlo en 8
-                    porciones, ayudados de un cuchillo humedecido para que no se nos quede pegado el arroz.
-                </p>
+                <div id="instrucciones">
+                    <h2>Instruccions</h2>
+                    <p>Comenzamos preparando el arroz. Como ya os explicamos aquí, hacer arroz para sushi es un proceso
+                        sencillo. Basta con cocer el arroz (tipo glutinoso o especial para sushi) y después enfriarlo
+                        con un
+                        abanico tras aliñarlo con vinagre, azúcar y sal.
+                        <br>
+                        <br>
+                        Es conveniente tener todos los ingredientes listos a la hora de preparar el sushi, ya que deben
+                        ser
+                        productos muy frescos y no conviene perder tiempo en su manipulación. Por eso, prepararemos una
+                        juliana de aguacate y haremos lo mismo con el pepino para tenerlo listo cuando vayamos a formar
+                        los
+                        makis.
+                        <br>
+                        <br>
+                        En cuanto al pescado a utilizar, en este caso cortamos el salmón eligiendo la zona de la
+                        ventresca
+                        para darle unos cortes en tiras. Aquí podéis ver perfectamente cómo hacerlo. Con todo listo,
+                        cortamos la hoja de alga nori en dos, la ponemos sobre una esterilla o makisu forrada de film
+                        transparente de cocina dejando el lado rugoso arriba, y sobre ella extendemos el arroz
+                        presionando
+                        un poco para que se adhiera.
+                        <br>
+                        <br>
+                        En el centro del arroz, colocamos las tiras de pescado, el pepino y el aguacate y opcionalmente,
+                        un
+                        poco de wasabi, si nos gusta el toque picante de este condimento. Ya solo falta enrollar el alga
+                        ayudados con la esterilla y formar un cilindro. A la hora de servirlo hay que cortarlo en 8
+                        porciones, ayudados de un cuchillo humedecido para que no se nos quede pegado el arroz.
+                    </p>
+                </div>
             </div>
         </main>
         <div id="sidebar">
             <div id="ingredientes">
                 <h2>Ingredients</h2>
                 <ul>
-                    <li>Arroz para sushi</li>
+                    <li>100g Arroz para sushi</li>
                     <li>Alga nori</li>
-                    <li>Salmón fresco</li>
-                    <li>Aguacate</li>
-                    <li>Pepino</li>
+                    <li>50g Salmón fresco</li>
+                    <li>1 Aguacate</li>
+                    <li>1 Pepino</li>
                     <li>Vinagre</li>
                     <li>Azúcar</li>
                     <li>Sal</li>
@@ -81,26 +89,26 @@
                 <div id="nutricion">
                     <div>
                         <span>Calorias</span>
-                        <span>300kcal</span>
+                        <span class="cantidades">300kcal</span>
                     </div>
                     <div>
                         <span>Carbs</span>
-                        <span>0g</span>
+                        <span class="cantidades">0g</span>
                     </div>
                     <div>
                         <span>Protein</span>
-                        <span>40g</span>
+                        <span class="cantidades">40g</span>
                     </div>
                     <div>
                         <span>Fat</span>
-                        <span>35g</span>
+                        <span class="cantidades">35g</span>
                     </div>
                 </div>
             </div>
             <div id="more_recipes">
                 <h2>More Recipes</h2>
                 <div class="container_padre">
-                    <a href="">
+                    <a href="katsudon.html">
                         <div class="container_hijo">
                             <img src="../img/katsudon.jpg" alt="katsudon plato japones">
                             <div class="container_text">
@@ -109,7 +117,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="">
+                    <a href="gyoza.html">
                         <div class="container_hijo">
                             <img src="../img/gyoza.jpg" alt="gyosa">
                             <div class="container_text">
@@ -118,7 +126,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="">
+                    <a href="mochis.html">
                         <div class="container_hijo">
                             <img src="../img/mochis.jpg" alt="dulce mochi">
                             <div class="container_text">
