--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 id="titulo">Our best recipes</h1>
             <div id="Recipes">
                 <div class="recipes1">
-                    <a href="./Recipes/recipe1.html">
+                    <a href="./Recipes/sushi.html">
                         <div class="recipe">
                             <img src="./img/sushi.jpg" alt="">
                             <h2>Sushi</h2>
@@ -40,7 +40,7 @@
                             </ul>
                         </div>
                     </a>
-                    <a href="">
+                    <a href="./Recipes/gyoza.html">
                         <div class="recipe">
                             <img src="./img/gyoza.jpg" alt="">
                             <h2>Gyozas</h2>
@@ -51,7 +51,7 @@
                             </ul>
                         </div>
                     </a>
-                    <a href="">
+                    <a href="./Recipes/katsudon.html">
                         <div class="recipe">
                             <img src="./img/katsudon.jpg" alt="">
                             <h2>Katsudon</h2>
@@ -64,7 +64,7 @@
                     </a>
                 </div>
                 <div class="recipes2">
-                    <a href="">
+                    <a href="./Recipes/mochis.html">
                         <div class="recipe">
                             <img src="./img/mochis.jpg" alt="">
                             <h2>Mochis</h2>
@@ -75,7 +75,7 @@
                             </ul>
                         </div>
                     </a>
-                    <a href="">
+                    <a href="./Recipes/onigiri.html">
                         <div class="recipe">
                             <img src="./img/onigiri.jpg" alt="">
                             <h2>Onigiri</h2>
@@ -86,7 +86,7 @@
                             </ul>
                         </div>
                     </a>
-                    <a href="">
+                    <a href="Recipes/ramen.html">
                         <div class="recipe">
                             <img src="./img/ramen.jpg" alt="">
                             <h2>Ramen</h2>
