--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <main>
             <div id="banner">
-                <p class="phara">Ad lorem ipsum dolor sit amet</p>
+                <p class="text-prueba">Ad lorem ipsum dolor sit amet</p>
             </div>
             <h1 id="titulo">Our best recipes</h1>
             <div id="Recipes">
