correction of tags in html, optimization of css and creation of mediaquery and styles for dark mode, creation of js folder and a script.js file, which contains a function to create a light and dark mode

--- a/Recipes/gyoza.html
+++ b/Recipes/gyoza.html
@@ -18,12 +18,14 @@
             <nav>
                 <ul>
                     <li><a href="#">Send your recipe</a></li>
-                    <li></li>
+                    <li class="switch">
+                        <button></button>
+                    </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div>
+            <div id="contenido_principal">
                 <img src="../img/gyoza.jpg" alt="gyozas" id="principal">
                 <h1>Gyozas</h1>
                 <p>Seguro que habéis visto las gyoza o empanadillas japonesas en libros, webs y redes sociales. Son un
@@ -150,6 +152,7 @@
             <p>© 2024 Bogotá Institute of Technology</p>
         </footer>
     </div>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
