--- a/Recipes/mochis.html
+++ b/Recipes/mochis.html
@@ -18,12 +18,14 @@
             <nav>
                 <ul>
                     <li><a href="#">Send your recipe</a></li>
-                    <li></li>
+                    <li class="switch">
+                        <button></button>
+                    </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div>
+            <div id="contenido_principal">
                 <img src="../img/mochis.jpg" alt="mochi dulce japones" id="principal">
                 <h1>M class="cantidades"ochis</h1>
                 <p>Puede ser que sepamos mucho de cocina japonesa y estamos habituados a encontrar en nuestras vidas
@@ -152,6 +154,7 @@
             <p>© 2024 Bogotá Institute of Technology</p>
         </footer>
     </div>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
