--- a/Recipes/onigiri.html
+++ b/Recipes/onigiri.html
@@ -18,12 +18,14 @@
             <nav>
                 <ul>
                     <li><a href="#">Send your recipe</a></li>
-                    <li></li>
+                    <li class="switch">
+                        <button></button>
+                    </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div>
+            <div id="contenido_principal">
                 <img src="../img/onigiri.jpg" alt="gyozas" id="principal">
                 <h1>Onigiris</h1>
                 <p>Son muchas las recetas japonesas que hemos hecho en DAP, pero hasta ahora no nos habíamos atrevido
@@ -148,6 +150,7 @@
             <p>© 2024 Bogotá Institute of Technology</p>
         </footer>
     </div>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
