--- a/Recipes/ramen.html
+++ b/Recipes/ramen.html
@@ -18,7 +18,9 @@
             <nav>
                 <ul>
                     <li><a href="#">Send your recipe</a></li>
-                    <li></li>
+                    <li class="switch">
+                        <button></button>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -188,6 +190,7 @@
             <p>© 2024 Bogotá Institute of Technology</p>
         </footer>
     </div>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
