--- a/Recipes/sushi.html
+++ b/Recipes/sushi.html
@@ -18,12 +18,14 @@
             <nav>
                 <ul>
                     <li><a href="#">Send your recipe</a></li>
-                    <li></li>
+                    <li class="switch">
+                        <button></button>
+                    </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div>
+            <div id="contenido_principal">
                 <img src="../img/sushi.jpg" alt="sushi japones" id="principal">
                 <h1>Sushi</h1>
                 <p>Cada vez nos gusta más los sabores orientales y aunque no todo es sushi en la cocina japonesa, sin
@@ -143,6 +145,7 @@
             <p>© 2024 Bogotá Institute of Technology</p>
         </footer>
     </div>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
