--- a/Recipes/katsudon.html
+++ b/Recipes/katsudon.html
@@ -18,12 +18,14 @@
             <nav>
                 <ul>
                     <li><a href="#">Send your recipe</a></li>
-                    <li></li>
+                    <li class="switch">
+                        <button></button>
+                    </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div>
+            <div id="contenido_principal">
                 <img src="../img/katsudon.jpg" alt="Katsudon" id="principal">
                 <h1>Katsudon</h1>
                 <p>Hemos de reconocer la buena fama que tiene la cocina japonesa y el buen resultado que da en la
@@ -149,6 +151,7 @@
             <p>© 2024 Bogotá Institute of Technology</p>
         </footer>
     </div>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
