--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <div id="grid-container">
         <header>
             <div id="logo">
-                <a href="#">BitCook</a>
+                <a href="./index.html">BitCook</a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Send your recipe</a></li>
-                    <li></li>
+                    <li><a href="./form/formulario.html">Send your recipe</a></li>
+                    <li class="switch">
+                        <button></button>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -26,78 +28,76 @@
             <div id="banner">
                 <p class="text-prueba">Ad lorem ipsum dolor sit amet</p>
             </div>
-            <h1 id="titulo">Our best recipes</h1>
+            <h1>Our best recipes</h1>
             <div id="Recipes">
-                <div class="recipes1">
+
+                <div class="recipe">
                     <a href="./Recipes/sushi.html">
-                        <div class="recipe">
-                            <img src="./img/sushi.jpg" alt="">
-                            <h2>Sushi</h2>
-                            <ul>
-                                <li>Total: Aproximately 40 minutes.</li>
-                                <li>Preparation: 10minutes</li>
-                                <li>Cooking: 30 minutes</li>
-                            </ul>
-                        </div>
+                        <img src="./img/sushi.jpg" alt="">
+                        <h2>Sushi</h2>
+                        <ul>
+                            <li>Total: Aproximately 40 minutes.</li>
+                            <li>Preparation: 10minutes</li>
+                            <li>Cooking: 30 minutes</li>
+                        </ul>
                     </a>
+                </div>
+                <div class="recipe">
                     <a href="./Recipes/gyoza.html">
-                        <div class="recipe">
-                            <img src="./img/gyoza.jpg" alt="">
-                            <h2>Gyozas</h2>
-                            <ul>
-                                <li>Total: Aproximately 40 minutes</li>
-                                <li>Preparation: 30 minutes</li>
-                                <li>Cooking: 10 minutes</li>
-                            </ul>
-                        </div>
+                        <img src="./img/gyoza.jpg" alt="">
+                        <h2>Gyozas</h2>
+                        <ul>
+                            <li>Total: Aproximately 40 minutes</li>
+                            <li>Preparation: 30 minutes</li>
+                            <li>Cooking: 10 minutes</li>
+                        </ul>
                     </a>
+                </div>
+                <div class="recipe">
                     <a href="./Recipes/katsudon.html">
-                        <div class="recipe">
-                            <img src="./img/katsudon.jpg" alt="">
-                            <h2>Katsudon</h2>
-                            <ul>
-                                <li>Total: Aproximately 1 hour</li>
-                                <li>Preparation: 10 minutes</li>
-                                <li>Cooking: 50 minutes</li>
-                            </ul>
-                        </div>
+                        <img src="./img/katsudon.jpg" alt="">
+                        <h2>Katsudon</h2>
+                        <ul>
+                            <li>Total: Aproximately 1 hour</li>
+                            <li>Preparation: 10 minutes</li>
+                            <li>Cooking: 50 minutes</li>
+                        </ul>
                     </a>
                 </div>
-                <div class="recipes2">
+                <div class="recipe">
                     <a href="./Recipes/mochis.html">
-                        <div class="recipe">
-                            <img src="./img/mochis.jpg" alt="">
-                            <h2>Mochis</h2>
-                            <ul>
-                                <li>Total: Aproximately 30 minutes</li>
-                                <li>Preparation: 30 minutes</li>
-                                <li>Repose: 2 hours</li>
-                            </ul>
-                        </div>
-                    </a>
-                    <a href="./Recipes/onigiri.html">
-                        <div class="recipe">
-                            <img src="./img/onigiri.jpg" alt="">
-                            <h2>Onigiri</h2>
-                            <ul>
-                                <li>Total: Aproximately 1 hour</li>
-                                <li>Preparation: 40 minutes</li>
-                                <li>Cooking: 20 minutes</li>
-                            </ul>
-                        </div>
-                    </a>
-                    <a href="Recipes/ramen.html">
-                        <div class="recipe">
-                            <img src="./img/ramen.jpg" alt="">
-                            <h2>Ramen</h2>
-                            <ul>
-                                <li>Total: Aproximately 1 hour</li>
-                                <li>Preparation: 30 minutes</li>
-                                <li>Cooking: 30 minutes</li>
-                            </ul>
-                        </div>
+                        <img src="./img/mochis.jpg" alt="">
+                        <h2>Mochis</h2>
+                        <ul>
+                            <li>Total: Aproximately 30 minutes</li>
+                            <li>Preparation: 30 minutes</li>
+                            <li>Repose: 2 hours</li>
+                        </ul>
                     </a>
                 </div>
+                <div class="recipe">
+                    <a href="./Recipes/onigiri.html">
+                        <img src="./img/onigiri.jpg" alt="">
+                        <h2>Onigiri</h2>
+                        <ul>
+                            <li>Total: Aproximately 1 hour</li>
+                            <li>Preparation: 40 minutes</li>
+                            <li>Cooking: 20 minutes</li>
+                        </ul>
+                    </a>
+                </div>
+                <div class="recipe">
+                    <a href="Recipes/ramen.html">
+                        <img src="./img/ramen.jpg" alt="">
+                        <h2>Ramen</h2>
+                        <ul>
+                            <li>Total: Aproximately 1 hour</li>
+                            <li>Preparation: 30 minutes</li>
+                            <li>Cooking: 30 minutes</li>
+                        </ul>
+                    </a>
+                </div>
+
             </div>
         </main>
         <footer>
@@ -105,6 +105,7 @@
             <p>© 2024 Bogotá Institute of Technology</p>
         </footer>
     </div>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
