--- a/Recipes/katsudon.html
+++ b/Recipes/katsudon.html
@@ -17,7 +17,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Send your recipe</a></li>
+                    <li><a href="../form/formulario.html">Send your recipe</a></li>
                     <li class="switch">
                         <button></button>
                     </li>
