--- a/form/formulario.html
+++ b/form/formulario.html
@@ -63,7 +63,7 @@
             <p>© 2024 Bogotá Institute of Technology</p>
         </footer>
     </div>
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
